--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "type": "phpcodesniffer-standard",
     "require": {
         "php": ">=5.6.0",
-        "squizlabs/php_codesniffer": "~3.3.0"
+        "squizlabs/php_codesniffer": "^3.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0 || ^5.0 || ^6.0 || ^7.0"
